content.js will start when the site is fully loaded

--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,8 @@
         {
         "matches": ["https://vk.com/*"],
         "js": ["content.js"],
-        "css": ["style.css"]
+        "css": ["style.css"],
+        "run_at": "document_end"
         }
     ]
 }
